perf: car list api
