# car/openapi.yaml
@@ -30,6 +30,46 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /car/list:
+        get:
+            tags:
+                - Car
+            operationId: Car_ListCar
+            parameters:
+                - name: carId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: carName
+                  in: query
+                  schema:
+                    type: string
+                - name: createTime.seconds
+                  in: query
+                  description: Represents seconds of UTC time since Unix epoch 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to 9999-12-31T23:59:59Z inclusive.
+                  schema:
+                    type: integer
+                    format: int64
+                - name: createTime.nanos
+                  in: query
+                  description: Non-negative fractions of a second at nanosecond resolution. Negative second values with fractions must still have non-negative nanos values that count forward in time. Must be from 0 to 999,999,999 inclusive.
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListCarReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         GoogleProtobufAny:
@@ -46,6 +86,25 @@ components:
                 message:
                     type: string
             description: The response message containing the greetings
+        ListCarReply:
+            type: object
+            properties:
+                carId:
+                    type: integer
+                    format: int64
+                carName:
+                    type: string
+                createTime:
+                    type: string
+                    format: date-time
+                carModel:
+                    type: array
+                    items:
+                        type: string
+                carParam:
+                    type: object
+                    additionalProperties:
+                        type: string
         Status:
             type: object
             properties:
